# fast-rcnn-mobility-aids

./: CMakeLists.txt  README.md
lib/datasets/: factory.py  imdb.py  mobility_aids.py
lib/fast_rcnn/: test.py
src/: generate_proposals.cpp
